Set up detail View scene

--- a/Home Chore Tracker/Home Chore Tracker/JerrySB.storyboard
+++ b/Home Chore Tracker/Home Chore Tracker/JerrySB.storyboard
@@ -68,7 +68,7 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aDs-U6-MuQ" kind="show" identifier="ShowChoreDetailSegue" id="hdA-Ba-7gX"/>
+                                    <segue destination="pqh-fH-tG9" kind="show" identifier="ShowChoreDetailSegue" id="hdA-Ba-7gX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -83,21 +83,111 @@
             </objects>
             <point key="canvasLocation" x="1005.7971014492755" y="132.58928571428572"/>
         </scene>
-        <!--View Controller-->
+        <!--Chore Name-->
         <scene sceneID="jbx-id-Urh">
             <objects>
                 <viewController id="aDs-U6-MuQ" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Epw-mQ-qPH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Have you completed this chore?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdQ-yd-Off">
+                                <rect key="frame" x="84.5" y="138" width="245.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MY3-m6-fUJ">
+                                <rect key="frame" x="87" y="188.5" width="240" height="240"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6qF-jZ-wVn">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="240"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MY3-m6-fUJ" secondAttribute="height" multiplier="1:1" id="PwT-Ol-sLG"/>
+                                    <constraint firstItem="6qF-jZ-wVn" firstAttribute="top" secondItem="MY3-m6-fUJ" secondAttribute="top" id="UNE-02-gQf"/>
+                                    <constraint firstAttribute="bottom" secondItem="6qF-jZ-wVn" secondAttribute="bottom" id="UmV-rv-pRY"/>
+                                    <constraint firstAttribute="trailing" secondItem="6qF-jZ-wVn" secondAttribute="trailing" id="Yih-7Y-2oF"/>
+                                    <constraint firstItem="6qF-jZ-wVn" firstAttribute="leading" secondItem="MY3-m6-fUJ" secondAttribute="leading" id="ag6-kn-wQf"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="uhy-79-2nt">
+                                <rect key="frame" x="88" y="482.5" width="238" height="36"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rpP-vc-Inf">
+                                        <rect key="frame" x="0.0" y="0.0" width="34" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vx9-0c-gcb">
+                                        <rect key="frame" x="51" y="0.0" width="34" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXI-Id-6cz">
+                                        <rect key="frame" x="102" y="0.0" width="34" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yO0-4P-GVd">
+                                        <rect key="frame" x="153" y="0.0" width="34" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⭐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nYs-1W-Kp3">
+                                        <rect key="frame" x="204" y="0.0" width="34" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sCu-xk-rPH">
+                                <rect key="frame" x="84" y="444.5" width="246" height="30"/>
+                                <state key="normal" title="Done"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Cameron, Please wash all of your soccer jerserys by Saturday morning." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ETY-SI-bOM">
+                                <rect key="frame" x="87.5" y="558.5" width="239" height="130.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="MY3-m6-fUJ" firstAttribute="centerX" secondItem="Epw-mQ-qPH" secondAttribute="centerX" id="6nL-Kw-Z3I"/>
+                            <constraint firstItem="uhy-79-2nt" firstAttribute="top" secondItem="sCu-xk-rPH" secondAttribute="bottom" constant="8" id="F5t-yU-iWg"/>
+                            <constraint firstItem="bka-4u-8EM" firstAttribute="trailing" secondItem="MY3-m6-fUJ" secondAttribute="trailing" constant="87" id="H0A-u6-677"/>
+                            <constraint firstItem="bka-4u-8EM" firstAttribute="trailing" secondItem="uhy-79-2nt" secondAttribute="trailing" constant="88" id="ISz-UN-uju"/>
+                            <constraint firstItem="bka-4u-8EM" firstAttribute="trailing" secondItem="sCu-xk-rPH" secondAttribute="trailing" constant="84" id="LDu-ZH-D6Z"/>
+                            <constraint firstItem="sCu-xk-rPH" firstAttribute="top" secondItem="MY3-m6-fUJ" secondAttribute="bottom" constant="16" id="LPK-sb-etW"/>
+                            <constraint firstItem="ETY-SI-bOM" firstAttribute="centerX" secondItem="BdQ-yd-Off" secondAttribute="centerX" id="LZP-i9-lAs"/>
+                            <constraint firstItem="BdQ-yd-Off" firstAttribute="centerX" secondItem="Epw-mQ-qPH" secondAttribute="centerX" id="XaJ-YW-Fu0"/>
+                            <constraint firstItem="ETY-SI-bOM" firstAttribute="top" secondItem="uhy-79-2nt" secondAttribute="bottom" constant="40" id="dua-Vj-iu6"/>
+                            <constraint firstItem="BdQ-yd-Off" firstAttribute="top" secondItem="bka-4u-8EM" secondAttribute="top" constant="30" id="fxK-cy-IyR"/>
+                            <constraint firstItem="MY3-m6-fUJ" firstAttribute="top" secondItem="BdQ-yd-Off" secondAttribute="bottom" constant="30" id="kQO-nD-0Iq"/>
+                            <constraint firstItem="sCu-xk-rPH" firstAttribute="leading" secondItem="bka-4u-8EM" secondAttribute="leading" constant="84" id="osx-6M-N4n"/>
+                            <constraint firstItem="MY3-m6-fUJ" firstAttribute="leading" secondItem="bka-4u-8EM" secondAttribute="leading" constant="87" id="rgS-sb-dlH"/>
+                            <constraint firstItem="bka-4u-8EM" firstAttribute="bottom" secondItem="ETY-SI-bOM" secondAttribute="bottom" constant="70" id="yJG-yP-n4C"/>
+                            <constraint firstItem="uhy-79-2nt" firstAttribute="leading" secondItem="bka-4u-8EM" secondAttribute="leading" constant="88" id="ya3-CN-OdA"/>
+                            <constraint firstItem="ETY-SI-bOM" firstAttribute="leading" secondItem="bka-4u-8EM" secondAttribute="leading" constant="87.5" id="zqD-M4-ov8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="bka-4u-8EM"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bCp-sm-hzF"/>
+                    <navigationItem key="navigationItem" title="Chore Name" id="bCp-sm-hzF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="ft3-JB-VIS"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FcS-W4-cnl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1939.1304347826087" y="132.58928571428572"/>
+            <point key="canvasLocation" x="2849.275362318841" y="132.58928571428572"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="3m3-q7-b4q">
@@ -115,6 +205,29 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DQb-CT-xpN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="95.652173913043484" y="132.58928571428572"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZwD-kZ-Snp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="pqh-fH-tG9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="dCk-UC-EI5"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="mXE-BM-IyZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="108"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3gy-tW-efw">
+                        <rect key="frame" x="0.0" y="759" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="aDs-U6-MuQ" kind="relationship" relationship="rootViewController" id="LmI-lO-0BR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="41e-Mr-Qr9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1939.1304347826087" y="132.58928571428572"/>
         </scene>
     </scenes>
 </document>
